# BlockBlitz

./: BlockBlitz.pro  CMakeLists.txt  README.md  STYLE_WIDGETS.qss
src/: tetris.cpp
